openfaas/gateway-external-svc.yml
---
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    component: gateway
  name: gateway-external
  namespace: "openfaas"
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 31112
  selector:
    app: gateway
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-admin
  namespace: openfaas
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 8080
  selector:
    app: gateway
